# hawthorn

./: .clang-tidy  .gitignore  CMakeLists.txt
examples/: lex_test.haw
includes/chunk/: chunk.h  opcodes.h
includes/interpreter/: repl.h  vm.h
includes/lexer/: lexer.h  token.h
includes/parser/: parser.h
includes/share/: array.h  buffer.h  error.h  hawconf.h  hawthorn.h  string.h  table.h
includes/type/: type.h
includes/value/: obj.h  value.h
src/: main.c
src/interpreter/: CMakeLists.txt  repl.c  vm.c
src/interpreter/chunk/: CMakeLists.txt  chunk.c  opcodes.c
src/lexer/: CMakeLists.txt  lexer.c
src/parser/: CMakeLists.txt  parser.c
src/share/: CMakeLists.txt  array.c  error.c  string.c  table.c
src/value/: CMakeLists.txt  obj.c  value.c
test/: arithmetics.haw  controlflows.haw  globalvars.haw  localvars.haw  test.haw  types.haw
